--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -1,11 +1,26 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center">
+    android:gravity="center"
+	android:orientation="vertical" >
 
+	<TextView
+		android:id="@+id/tv_cronometro_ID"
+
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+	
     <TextView
+		android:id="@+id/text_view_id"
         android:text="@string/hello_world"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
+	
+	<Button
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:id="@+id/btn_One_ID"
+		android:text="Clique"
+		android:onClick="onClickButton" />
 
 </LinearLayout>
